app/static/base_style.css
/* ... */
/* -------------------------------------------- SIDEBAR USER -------------------------------------------- */
.sidenav-user-bg {
    font-size: 12px;
    display: flex;
    align-items: center;
    height: 50px; 
    overflow: hidden;
    margin-bottom: 15px;
    width: 500px;
}

.sidenav-user-bg:hover {
    display: flex;
    width: 500px;
}

.sidenav-user-bg div {
    position: relative;
    transition: all 0.3s ease-in;
    opacity: 0;
    visibility: hidden;
    background-color: var(--darkBlue);
    color: white;
    padding: 10px;
    border-radius: 10px;
    left: 15px;
}

.sidenav-user-bg:hover div {
    left: 25px;
    opacity: 1;
    visibility: visible;
    z-index: 1;
}

.user-img {
    width: 45px;
    border-radius: 100%;
    margin-left: 10px;
}

.foot-nav {
    position: absolute;
    bottom: 0;
    margin-bottom: 10px;
}

/* -------------------------------------------- DASHBOARD -------------------------------------------- */
.date-time {
    font-weight: 900;
    position: relative;
    display: flex;
    margin-top: 1%;
    margin-left: 1%;
    color: var(--darkBlue);
}

.doctor-bg img {
    position: relative;
    margin-top: 10px;
    width: 98%; 
    /* border-radius: 20px; */
} 

.greetings-name {
    position: absolute;
    display: flex;
    gap: 5px;
    top: 45px;
    left: 170px;
    color: var(--darkBlue);
}

.greetings-name p {
    font-size: 25px;
}

.greetings {
    position: absolute;
    top: 80px;
    left: 170px;
    color: var(--darkBlue);   
}


/* -------------------------------------------- ADD ICONS -------------------------------------------- */
.add-icon img {
    position: relative;
    top: -10px;
    left: 95%;
    width: 40px;
    border-radius: 100%;
}

.add-icon img:active {
    transform: translateY(1px);
}

.add-icon.patient img {
    top: -49px;
    left: 94%;
}

/* -------------------------------------------- PATIENT TABLE -------------------------------------------- */
.patient-header p {
    position: relative;
    top: 20px;
    text-align: left;
    padding: 0px 25px;
    font-weight: 900;
    font-size: 18px;
}

.patient-table {
    position: relative; 
    margin-top: 15px;
    width: 95%;
    line-height: 1;
    color: var(--darkBlue);
    background-color: white;
    font-size: 15px;
}

.patient-table.request {
    top: 190px; 
}

.table {
    margin-bottom: 1rem;
    text-align: center;
}

.table th,
.table td {
    padding: 0.50rem;
}

.table thead {
    background-color: var(--blueC);
    color: var(--darkBlue);
}

/* .table-striped tbody tr:nth-of-type(even) {
    background-color: var(--blueC)
} */

.table-striped tbody td {
    border-bottom: 1px solid var(--blueC); 
}

.action-icon-container {
    display: flex; 
    justify-content: center;
    gap: 10px;
}

.delete-icon img {
    width: 35px;
    cursor: pointer;
}

.delete-icon img:active {
    transform: translateY(1px);
}

/* -------------------------------------------- SHOW ENTRIES INFO -------------------------------------------- */
.dataTables_info {
    margin-bottom: 0px;
    position: absolute;
    font-style: italic;
    color: var(--grayA);
    font-size: 14px;
}

/* -------------------------------------------- PAGINATION -------------------------------------------- */
.pagination {
    display: flex;
    padding-left: 0;
    list-style: none;
    justify-content: center;
    position: relative;
}
  
.page-link {
    padding: 0.5rem 0.75rem;
    margin-left: -1px;
    line-height: 1.25;
    color: var(--blueD); 
    background-color: #fff; 
}

.page-item.active .page-link {
    z-index: 2;
    color: #fff; 
    background-color: var(--blueD); 
    border-radius: 5px;
}
  
.page-item.disabled .page-link {
    pointer-events: none;
    color: var(--grayA); 
}
  
.page-link:hover {
    color: var(--grayA); 
    text-decoration: none;
    background-color: var(--grayB); 
    border-radius: 5px;
}

/* -------------------------------------------- SEARCH -------------------------------------------- */
.dataTables_wrapper .dataTables_filter input {
    padding: 0.375rem 0.5rem;
    margin-bottom: 1rem; 
    color: var(--darkBlue); 
    background-color: white; 
    border: 1px solid var(--blueB); 
    border-radius: 0.25rem; 
    margin-left: 15px;
    height: 35px;
    width: 200px;  
}

.dataTables_wrapper .dataTables_filter {
    position: relative;
    margin-left: 75%;
}
  
.dataTables_wrapper .dataTables_filter input:focus {
    color: var(--darkBlue); 
    background-color: white; 
    border-color:  var(--blueB); 
    outline: 0;
    box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1);
}

/* -------------------------------------------- SHOW [NUMBER] ENTRIES -------------------------------------------- */
.dataTables_wrapper .dataTables_length {
    margin-bottom: 0px;
    position: absolute;
}

.dataTables_wrapper .dataTables_length label {
    font-weight: normal;
    text-align: left;
    white-space: nowrap;
}
  
.dataTables_wrapper .dataTables_length select {
    width: auto;
    display: inline-block;
    padding: 0.375rem 0.25rem;
    color: var(--grayA); 
    background-color: #fff; 
    border: 1px solid var(--blueB); 
    border-radius: 0.25rem; 
}
  
.dataTables_wrapper .dataTables_length select:focus {
    color: var(--grayA); 
    background-color: #fff; 
    border-color: var(--blueB); 
    outline: 0;
    box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1); 
}

/* -------------------------------------------- BUTTONS -------------------------------------------- */
.btn-container {
    position: relative;
    display: flex;
    justify-content: center; 
    align-items: center; 
    margin-top: 50px;
}

.btn-submit {
    position: relative;
    color: white;
    background-color: var(--blueD);
    border: none;
    border-radius: 5px;
    width: 100px;
    height: 40px;
    font-size: 16px;
    cursor: pointer;
}

.btn-submit:active {
    transform: translateY(1px);
}
/* ... */

